[gd_scene load_steps=17 format=3 uid="uid://cnvm3bpon1t3u"]

[ext_resource type="Script" path="res://Scenes/policeCar.gd" id="1_iek1t"]
[ext_resource type="Texture2D" uid="uid://cp4rtyggwbrfk" path="res://Sprites/Poleees-sheet.png" id="2_2ks70"]
[ext_resource type="AudioStream" uid="uid://bujtaibkxk8dj" path="res://sound/vox/siren_1.ogg" id="2_h1cxj"]
[ext_resource type="AudioStream" uid="uid://ekadrdie01rp" path="res://sound/vox/siren_2.ogg" id="3_ifily"]
[ext_resource type="Texture2D" uid="uid://dae62e1fnjx35" path="res://Sprites/light.png" id="3_jyetm"]
[ext_resource type="Texture2D" uid="uid://il3go56iupxm" path="res://Sprites/siren.png" id="6_5sgud"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t3u7x"]
size = Vector2(28, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iivab"]
size = Vector2(33.3867, 27.5378)

[sub_resource type="AtlasTexture" id="AtlasTexture_k68sm"]
atlas = ExtResource("2_2ks70")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt32p"]
atlas = ExtResource("2_2ks70")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_58tom"]
atlas = ExtResource("2_2ks70")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wri2"]
atlas = ExtResource("2_2ks70")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4y86"]
atlas = ExtResource("2_2ks70")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1srf3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k68sm")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt32p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58tom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wri2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4y86")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_fuwov"]
resource_name = "Sirens"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Hoodlights/HoodlightBlue:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hoodlights/HoodlightRed:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3xdkk"]
_data = {
"Sirens": SubResource("Animation_fuwov")
}

[node name="PoliceCar" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_iek1t")
siren_sounds = Array[AudioStreamOggVorbis]([ExtResource("2_h1cxj"), ExtResource("3_ifily")])

[node name="MovementTimer" type="Timer" parent="."]

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CarDetector" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarDetector"]
position = Vector2(-14, 0)
shape = SubResource("RectangleShape2D_t3u7x")

[node name="FrontDetector" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontDetector"]
position = Vector2(15, -0.5)
rotation = 1.58472
shape = SubResource("RectangleShape2D_iivab")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_1srf3")
animation = &"dead"
autoplay = "default"

[node name="BounceTimer" type="Timer" parent="."]
one_shot = true

[node name="Headlights" type="Node2D" parent="."]

[node name="HeadlightL" type="PointLight2D" parent="Headlights"]
position = Vector2(104, -3.99954)
scale = Vector2(1.15011, 0.714547)
color = Color(1, 1, 0.686275, 0.498039)
energy = 2.0
texture = ExtResource("3_jyetm")

[node name="HeadlightR" type="PointLight2D" parent="Headlights"]
position = Vector2(103, 8.00046)
scale = Vector2(1.15011, 0.702243)
color = Color(1, 1, 0.686275, 0.498039)
energy = 2.0
texture = ExtResource("3_jyetm")

[node name="SirenSound" type="AudioStreamPlayer2D" parent="."]
attenuation = 3.73213
panning_strength = 2.0

[node name="Hoodlights" type="Node2D" parent="."]

[node name="HoodlightBlue" type="PointLight2D" parent="Hoodlights"]
position = Vector2(0, -12)
color = Color(0, 0, 1, 1)
energy = 1.5
texture = ExtResource("6_5sgud")
texture_scale = 2.0

[node name="HoodlightRed" type="PointLight2D" parent="Hoodlights"]
visible = false
position = Vector2(0, 13)
color = Color(1, 0, 0, 1)
energy = 1.5
texture = ExtResource("6_5sgud")
texture_scale = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3xdkk")
}
autoplay = "Sirens"

[node name="Node" type="Node" parent="."]

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="body_entered" from="CarDetector" to="." method="_on_car_detactor_body_entered"]
[connection signal="body_entered" from="FrontDetector" to="." method="_on_front_detector_body_entered"]
[connection signal="timeout" from="BounceTimer" to="." method="_on_bounce_timer_timeout"]
